--- a/index.html
+++ b/index.html
@@ -60,5 +60,5 @@
 </head>
   <body class="bg-slate-900 text-slate-100 antialiased overflow-hidden">
     <div id="root"></div>
-  </body>
+    <script type="module" src="/index.tsx"></script>
 </html>
